# uci_web_crawler

./: config.ini  crawler_report.txt  launch.py  pyproject.toml  scraper.py
crawler/: __init__.py  frontier.py  test_server_connection.py  worker.py
utils/: __init__.py  download.py  response.py
