[tool.poetry]
name = "uci-web-crawler"
version = "0.1.0"
description = ""
authors = ["Delphine Tai-Beauchamp <delphinetaibeauchamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacetime = {path = "packages/spacetime-2.1.1-py3-none-any.whl"}
cbor = "^1.0.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
logger = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
